# Python_data

./: .gitignore
Birthday_Middle_Earth/: B_days.py
Sorter/: pyproject.toml
Sorter/sorter/: factorize.py  main.py
WebApp/: pyproject.toml
WebApp/webapp/: main.py
WebApp/webapp/front-init/: error.html  index.html  message.html
clean_folder/: setup.py
cli_bot/: .dockerignore  Dockerfile  contacts.pickle  main.py  pyproject.toml
cli_bot/cli_bot/: classes.py  commands.py  contacts_saved.pickle  decorator.py  main.py  show_greeting.py  show_help.py
cli_bot/commands_handler/: commands.py
cli_bot/contacts/: display_contacts.py  save_contacts.py
cli_bot/decorator/: decorator.py
cli_bot/display_help/: display_help.py
cli_bot/greet/: greet.py
cli_bot_classes_ver6/: classes.py  commands.py  contacts_saved.pickle  main.py
cli_bot_classes_ver_10/: classes.py  commands.py  contacts_saved.pickle  decorator.py  main.py
cli_bot_classes_ver_10_1/: classes.py  contacts_saved.pickle  decorator.py  main.py  show_help.py
cli_bot_classes_ver_10_3/: classes.py  commands.py  decorator.py  main.py  show_help.py
cli_bot_classes_ver_7/: classes.py  commands.py  contacts_saved.pickle  main.py  show_help.py
cli_bot_classes_ver_8/: classes.py  commands.py  contacts_saved.pickle  main.py  show_contacts.py
cli_bot_classes_ver_8.3/: classes.py  commands.py  main.py
cli_bot_classes_ver_8.4/: classes.py  commands.py  contacts_saved.pickle  main.py  show_contacts.py
cli_bot_classes_ver_8_5/: classes.py  commands.py  contacts_saved.pickle  main.py  show_help.py
cli_bot_classes_ver_8_6/: classes.py  commands.py  main.py
cli_bot_classes_ver_8_7/: classes.py  commands.py  contacts_saved.pickle  decorator.py  main.py
cli_bot_classes_ver_8_8/: classes.py  commands.py  contacts_saved.pickle  main.py
cli_bot_classes_ver_9/: main.py  (+3 more)
web_exchange/: pyproject.toml
web_exchange/web_exchange/: aio_client.py  web_sock_serv.py
(+27 files in other folders)
