[tool.poetry]
name = "sorter"
version = "0.1.0"
description = ""
authors = ["Wargoth_ks <121107554+Wargoth-ks@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transliterate = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
