[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Wargoth_ks <121107554+Wargoth-ks@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
